llm/rust/triton-llm/tests/snapshots/openai_completions__valid_samples-2.snap
---
source: rust/protocols/tests/openai_completions.rs
description: "should have prompt, model, and max_tokens fields"
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?",
  "max_tokens": 10
}
