llm/rust/triton-llm/tests/snapshots/openai_completions__valid_samples-5.snap
---
source: rust/protocols/tests/openai_completions.rs
description: "should have prompt, model, and frequency_penalty fields"
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?",
  "frequency_penalty": -2.0
}
