llm/rust/triton-llm/tests/snapshots/openai_completions__valid_samples-8.snap
---
source: rust/protocols/tests/openai_completions.rs
description: "should have prompt, model, and echo fields"
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?",
  "echo": true
}
